第二次提交

--- a/index.htm
+++ b/index.htm
@@ -3,9 +3,9 @@
 <html lang="en" class=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>钟颖个人在线简历</title>
-    <link rel="stylesheet" href="./简历生成器_files/style.css">
-    <link rel="stylesheet" href="./简历生成器_files/remodal.css">
-    <link rel="stylesheet" href="./简历生成器_files/remodal-default-theme.min.css">
+    <link rel="stylesheet" href="./cssjs/style.css">
+    <link rel="stylesheet" href="./cssjs/remodal.css">
+    <link rel="stylesheet" href="./cssjs/remodal-default-theme.min.css">
 </head>
 
 <body style="padding-right: 0px;">
@@ -49,7 +49,7 @@
                 <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title" contenteditable="true">个人微信</span><span class="unit-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="./简历生成器_files/weixin.png" alt="">
+                    <img src="./cssjs/weixin.png" alt="">
 
                 </div>
             </div>
@@ -100,8 +100,7 @@
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
 						<h3><a><strong>吉祥物/</strong></a></h3>
-                        <p><a target="_blank" href="https://zhongying666.oss-cn-shenzhen.aliyuncs.com/%E5%90%89%E7%A5%A5%E7%89%A9/NEWSir%20%E4%B8%BB%E5%BD%A2%E8%B1%A1">吉祥物/NEWSir 主形象</a></p>
-                        <p><a target="_blank" href="https://zhongying666.oss-cn-shenzhen.aliyuncs.com/%E5%90%89%E7%A5%A5%E7%89%A9/NEWSir%20%E4%B8%BB%E5%BD%A2%E8%B1%A1%20%20%E6%8F%90%20%E6%A1%88%20.ai">吉祥物/NEWSir 主形象  提 案 .ai</a></p>
+                        <p><a target="_blank" href="https://zhongying666.oss-cn-shenzhen.aliyuncs.com/%E5%90%89%E7%A5%A5%E7%89%A9/NEWSir%20IP%E5%BD%A2%E8%B1%A1%205-27.pdf">吉祥物/NEWSir IP形象 5-27.pdf</a></p>
                         <p><a target="_blank" href="https://zhongying666.oss-cn-shenzhen.aliyuncs.com/%E5%90%89%E7%A5%A5%E7%89%A9/%E5%90%89%E7%A5%A5%E7%89%A9%E7%AE%80%E5%8D%95%E6%96%87%E6%A1%8810.20.doc">吉祥物/吉祥物简单文案10.20.doc</a></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
 					<li>
