第三次提交

--- a/index.htm
+++ b/index.htm
@@ -3,9 +3,9 @@
 <html lang="en" class=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     
     <title>钟颖个人在线简历</title>
-    <link rel="stylesheet" href="./cssjs/style.css">
-    <link rel="stylesheet" href="./cssjs/remodal.css">
-    <link rel="stylesheet" href="./cssjs/remodal-default-theme.min.css">
+    <link rel="stylesheet" href="./cssjs222/style.css">
+    <link rel="stylesheet" href="./cssjs222/remodal.css">
+    <link rel="stylesheet" href="./cssjs222/remodal-default-theme.min.css">
 </head>
 
 <body style="padding-right: 0px;">
@@ -49,7 +49,7 @@
                 <h2 class="info-header"><i class="iconfont icon-weixin"></i> <span class="info-title" contenteditable="true">个人微信</span><span class="unit-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></h2>
                 <hr>
                 <div class="weixin">
-                    <img src="./cssjs/weixin.png" alt="">
+                    <img src="./cssjs222/weixin.png" alt="">
 
                 </div>
             </div>
