--- a/index.htm
+++ b/index.htm
@@ -71,7 +71,7 @@
                 <hr>
                 <ul class="experience-list">
                     <li>
-                        <h3 contenteditable="true">2019.8-2021.8&nbsp;<br>北京创客空间－智恩汽车科技（深圳）有限公司&nbsp; &nbsp;策划总监&nbsp; &nbsp;&nbsp;</h3>
+                        <h3 contenteditable="true">2019.8-2021.8&nbsp;<br>智恩汽车科技（深圳）有限公司&nbsp; &nbsp;策划总监&nbsp; &nbsp;&nbsp;</h3>
                         <p contenteditable="true"><div>1、负责品牌推广策略制定及全案落地执行;</div><div>2、负责品牌设计统筹工作，包括品牌视觉形象、品牌推广物料等设计制作等；</div><div>3、品牌宣传视频脚本策划、制作等;</div><div>4、负责公司各个自媒体平台宣传运营，包括但不限于公众号/视频号/抖音/小红书/毒&nbsp; &nbsp; &nbsp; &nbsp;物/百家号/搜狐汽车等平台的运营管理及发布等;</div><div>5、负责品牌活动的策划、宣传文案、海报设计文案等;</div><div>6、负责公司内部工作分配与统筹规划。</div><div><br></div></p>
                     <span class="item-remove" style="visibility: hidden;"><i class="iconfont icon-delete"></i></span></li>
                     <li>
